--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "deepcopy": "^2.1.0",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.1",
     "vue": "^3.0.0",
